Bug 385883, imgRequest wrongly calculates image size for the cache, Patch by Alfred Kayser, r=pavlov, sr=tor